feat: 인기 포폴 방식 변경 및 유저 좋아요 여부 반영